[gd_scene load_steps=10 format=3 uid="uid://dnus2qku88gfk"]

[ext_resource type="Script" uid="uid://o4f6ne8s8nc0" path="res://source/conveyor_belt/conveyor_belt.gd" id="1_ntvlh"]
[ext_resource type="Material" uid="uid://c0rhsit1yp1h2" path="res://source/conveyor_belt/y_material.tres" id="2_oxpmr"]
[ext_resource type="QuadMesh" uid="uid://bwkipxa8tfqst" path="res://source/conveyor_belt/y_mesh.tres" id="3_5djkk"]
[ext_resource type="QuadMesh" uid="uid://ca6vvcer7oa6k" path="res://source/conveyor_belt/z_mesh.tres" id="4_0arfl"]
[ext_resource type="Material" uid="uid://co8f2rkx4mmnh" path="res://source/conveyor_belt/z_material.tres" id="4_oxpmr"]
[ext_resource type="QuadMesh" uid="uid://neau3epe6jwo" path="res://source/conveyor_belt/x_mesh.tres" id="5_ds4k1"]
[ext_resource type="Material" uid="uid://dykppf4fv3dr2" path="res://source/conveyor_belt/x_material.tres" id="6_y1hjk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_25s2w"]
resource_local_to_scene = true
size = Vector3(1, 0.5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_y1hjk"]
resource_local_to_scene = true

[node name="ConveyorBelt" type="StaticBody3D" groups=["conveyor_belt"]]
process_mode = 3
disable_mode = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("1_ntvlh")

[node name="Start" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)

[node name="End" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_25s2w")

[node name="Model" type="Node3D" parent="."]

[node name="Top" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.25, 0)
material_override = ExtResource("2_oxpmr")
mesh = ExtResource("3_5djkk")
skeleton = NodePath("../..")

[node name="Bottom" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.25, 0)
material_override = ExtResource("2_oxpmr")
mesh = ExtResource("3_5djkk")
skeleton = NodePath("../..")

[node name="Back" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
material_override = ExtResource("4_oxpmr")
mesh = ExtResource("4_0arfl")
skeleton = NodePath("../..")

[node name="Front" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, -0.5)
material_override = ExtResource("4_oxpmr")
mesh = ExtResource("4_0arfl")
skeleton = NodePath("../..")

[node name="Right" type="MeshInstance3D" parent="Model"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0, 0)
material_override = ExtResource("6_y1hjk")
mesh = ExtResource("5_ds4k1")
skeleton = NodePath("../..")

[node name="Left" type="MeshInstance3D" parent="Model"]
transform = Transform3D(-4.37114e-08, -8.74228e-08, -1, 0, -1, 8.74228e-08, -1, 3.82137e-15, 4.37114e-08, -0.5, 0, 0)
material_override = ExtResource("6_y1hjk")
mesh = ExtResource("5_ds4k1")
skeleton = NodePath("../..")

[node name="ObjectDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ObjectDetector"]
shape = SubResource("BoxShape3D_y1hjk")

[connection signal="body_entered" from="ObjectDetector" to="." method="_on_object_detector_body_entered"]
[connection signal="body_exited" from="ObjectDetector" to="." method="_on_object_detector_body_exited"]
